--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
