--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/pg-format": "^1.0.2",
     "@types/supertest": "^2.0.12",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
