--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "pg-format": "^1.0.4"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node-fetch": "^3.2.10",
     "pg": "^8.7.3",
     "supertest": "^6.2.4"
   },
